--- a/window.ui
+++ b/window.ui
@@ -337,9 +337,9 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>20</y>
+     <y>49</y>
      <width>600</width>
-     <height>600</height>
+     <height>571</height>
     </rect>
    </property>
   </widget>
@@ -475,9 +475,9 @@ p, li { white-space: pre-wrap; }
    <widget class="QRadioButton" name="prism2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>80</y>
-      <width>91</width>
+      <x>10</x>
+      <y>70</y>
+      <width>121</width>
       <height>20</height>
      </rect>
     </property>
@@ -490,15 +490,15 @@ p, li { white-space: pre-wrap; }
      <enum>Qt::RightToLeft</enum>
     </property>
     <property name="text">
-     <string>CFS prism2</string>
+     <string>prism2 CAL file</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="glass">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>40</y>
-      <width>51</width>
+      <x>60</x>
+      <y>20</y>
+      <width>121</width>
       <height>20</height>
      </rect>
     </property>
@@ -506,7 +506,7 @@ p, li { white-space: pre-wrap; }
      <enum>Qt::LeftToRight</enum>
     </property>
     <property name="text">
-     <string>glass</string>
+     <string>glass material</string>
     </property>
     <property name="checked">
      <bool>true</bool>
@@ -515,8 +515,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>30</y>
+      <x>10</x>
+      <y>20</y>
       <width>41</width>
       <height>41</height>
      </rect>
@@ -541,7 +541,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>140</x>
       <y>70</y>
       <width>41</width>
       <height>41</height>
@@ -560,8 +560,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>110</y>
+      <x>10</x>
+      <y>120</y>
       <width>41</width>
       <height>41</height>
      </rect>
@@ -579,9 +579,9 @@ p, li { white-space: pre-wrap; }
    <widget class="QRadioButton" name="bsdf">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>60</x>
       <y>120</y>
-      <width>82</width>
+      <width>121</width>
       <height>17</height>
      </rect>
     </property>
@@ -591,7 +591,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>CFS BSDF</string>
+     <string>BSDF XML file</string>
     </property>
     <property name="checked">
      <bool>false</bool>
@@ -617,9 +617,9 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
+      <y>170</y>
       <width>171</width>
-      <height>71</height>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
@@ -641,6 +641,61 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="documentTitle">
      <string/>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_bsdf">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>140</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_prism2">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>121</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_glass">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>40</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>40</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>transmissivity</string>
     </property>
    </widget>
   </widget>
@@ -926,7 +981,7 @@ p, li { white-space: pre-wrap; }
      <enum>Qt::RightToLeft</enum>
     </property>
    </widget>
-   <widget class="QRadioButton" name="illuminance">
+   <widget class="QRadioButton" name="luminance">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -936,10 +991,10 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="toolTip">
-     <string>vlambda weighted irradiance (lx)</string>
+     <string>vlambda weighted radiance (cd/m²)</string>
     </property>
     <property name="text">
-     <string>Illuminance</string>
+     <string>Luminance</string>
     </property>
     <property name="checked">
      <bool>true</bool>
@@ -955,7 +1010,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="toolTip">
-     <string>clambda weighted irradiance (W/m²)</string>
+     <string>clambda weighted radiance (W/(m²sr))</string>
     </property>
     <property name="text">
      <string>Bluminance</string>
@@ -1240,7 +1295,7 @@ p, li { white-space: pre-wrap; }
     </font>
    </property>
    <property name="title">
-    <string>IEA21 BTDF directory</string>
+    <string>IEA21 BTDF to BSDF XML</string>
    </property>
    <widget class="QLineEdit" name="filesDirectory">
     <property name="geometry">
@@ -1555,6 +1610,201 @@ p, li { white-space: pre-wrap; }
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
+  <widget class="QLineEdit" name="lineEdit_vpx">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>20</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>20</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>y:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_vpy">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>20</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_23">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>20</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>point x:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_vpz">
+   <property name="geometry">
+    <rect>
+     <x>390</x>
+     <y>20</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_25">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>20</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>z:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_31">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>20</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>direction</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_vdy">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>20</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_28">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>20</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>x:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_29">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>20</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>z:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_30">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>20</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>y:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_vdx">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>20</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_vdz">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>20</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>750</x>
+     <y>20</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>scale:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_scale">
+   <property name="geometry">
+    <rect>
+     <x>792</x>
+     <y>20</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
  </widget>
  <customwidgets>
   <customwidget>
@@ -1567,6 +1817,7 @@ p, li { white-space: pre-wrap; }
     <signal>setDFImage(QPixmap)</signal>
     <signal>DFToolTip(QString)</signal>
     <signal>setGlareIndex()</signal>
+    <signal>view(float,float,float,float,float,float)</signal>
     <slot>setLatitude(QString)</slot>
     <slot>setLongitude(QString)</slot>
     <slot>setMonth(QString)</slot>
@@ -2009,10 +2260,10 @@ p, li { white-space: pre-wrap; }
    </hints>
   </connection>
   <connection>
-   <sender>illuminance</sender>
+   <sender>luminance</sender>
    <signal>toggled(bool)</signal>
    <receiver>VisuCFS</receiver>
-   <slot>setIlluminance(bool)</slot>
+   <slot>setLuminance(bool)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>923</x>
@@ -2120,6 +2371,166 @@ p, li { white-space: pre-wrap; }
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>bsdf</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>lineEdit_bsdf</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>119</x>
+     <y>537</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>134</x>
+     <y>557</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>bsdf</sender>
+   <signal>clicked()</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>getFileBSDF()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>115</x>
+     <y>537</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>219</x>
+     <y>469</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>prism2</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>lineEdit_prism2</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>107</x>
+     <y>480</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>110</x>
+     <y>509</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>prism2</sender>
+   <signal>clicked()</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>getFilePrism2()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>96</x>
+     <y>486</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>221</x>
+     <y>443</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_prism2</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setFilePrism2(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>58</x>
+     <y>509</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>221</x>
+     <y>373</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_bsdf</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setFileBSDF(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>186</x>
+     <y>551</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>220</x>
+     <y>340</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>glass</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>lineEdit_glass</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>89</x>
+     <y>436</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>186</x>
+     <y>461</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_glass</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setGlassTransmissivity(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>170</x>
+     <y>455</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>220</x>
+     <y>312</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>widget</sender>
+   <signal>view(float,float,float,float,float,float)</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setView(float,float,float,float,float,float)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>629</x>
+     <y>184</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>777</x>
+     <y>26</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_scale</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setScale()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>823</x>
+     <y>33</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>676</x>
+     <y>10</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>getPosition()</slot>
@@ -2138,7 +2549,7 @@ p, li { white-space: pre-wrap; }
   <slot>setGlareRiskCalculation(bool)</slot>
   <slot>setGlareRiskIndex()</slot>
   <slot>convertBTDF_clicked()</slot>
-  <slot>setIlluminance(bool)</slot>
+  <slot>setLuminance(bool)</slot>
   <slot>setDFRequiredIlluminance()</slot>
   <slot>setLogScale(bool)</slot>
   <slot>setDaylightFactor(bool)</slot>
@@ -2153,5 +2564,13 @@ p, li { white-space: pre-wrap; }
   <slot>setHour(int)</slot>
   <slot>setHour(QString)</slot>
   <slot>setMaxValue(QString)</slot>
+  <slot>getFileBSDF()</slot>
+  <slot>getFilePrism2()</slot>
+  <slot>setFileBSDF(QString)</slot>
+  <slot>setFilePrism2(QString)</slot>
+  <slot>setGlassTransmissivity(QString)</slot>
+  <slot>setView(float,float,float,float,float,float)</slot>
+  <slot>setScale(QString)</slot>
+  <slot>setScale()</slot>
  </slots>
 </ui>
