Modifications for compilation with Qt 5, removed the LightMaps and included the btdf2radiance.cxx from the latest version

--- a/window.ui
+++ b/window.ui
@@ -343,24 +343,6 @@ p, li { white-space: pre-wrap; }
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_map">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>60</y>
-     <width>41</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>8</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Map</string>
-   </property>
-  </widget>
   <widget class="QDial" name="orientationDial">
    <property name="geometry">
     <rect>
@@ -1629,7 +1611,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit_vpx">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>300</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1642,7 +1624,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_22">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>350</x>
      <y>20</y>
      <width>16</width>
      <height>16</height>
@@ -1655,7 +1637,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit_vpy">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>360</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1670,18 +1652,18 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>230</x>
      <y>20</y>
-     <width>41</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>point x:</string>
+    <string>view point</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_vpz">
    <property name="geometry">
     <rect>
-     <x>390</x>
+     <x>420</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1694,7 +1676,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_25">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>410</x>
      <y>20</y>
      <width>16</width>
      <height>16</height>
@@ -1707,7 +1689,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_31">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>480</x>
      <y>20</y>
      <width>41</width>
      <height>16</height>
@@ -1720,7 +1702,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit_vdy">
    <property name="geometry">
     <rect>
-     <x>570</x>
+     <x>600</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1733,7 +1715,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_28">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>530</x>
      <y>20</y>
      <width>16</width>
      <height>16</height>
@@ -1746,7 +1728,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_29">
    <property name="geometry">
     <rect>
-     <x>620</x>
+     <x>650</x>
      <y>20</y>
      <width>16</width>
      <height>16</height>
@@ -1759,7 +1741,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_30">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>590</x>
      <y>20</y>
      <width>16</width>
      <height>16</height>
@@ -1772,7 +1754,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit_vdx">
    <property name="geometry">
     <rect>
-     <x>510</x>
+     <x>540</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1785,7 +1767,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit_vdz">
    <property name="geometry">
     <rect>
-     <x>630</x>
+     <x>660</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1819,6 +1801,19 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_32">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>20</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>x:</string>
    </property>
   </widget>
  </widget>
@@ -1860,22 +1855,6 @@ p, li { white-space: pre-wrap; }
   <include location="visuCFS.qrc"/>
  </resources>
  <connections>
-  <connection>
-   <sender>pushButton_map</sender>
-   <signal>clicked()</signal>
-   <receiver>VisuCFS</receiver>
-   <slot>getPosition()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>190</x>
-     <y>81</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>330</x>
-     <y>406</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>predefinedDay</sender>
    <signal>toggled(bool)</signal>
