--- a/window.ui
+++ b/window.ui
@@ -1624,10 +1624,10 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_22">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>346</x>
      <y>20</y>
-     <width>16</width>
-     <height>16</height>
+     <width>20</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -1653,7 +1653,7 @@ p, li { white-space: pre-wrap; }
      <x>230</x>
      <y>20</y>
      <width>71</width>
-     <height>16</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -1676,10 +1676,10 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_25">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>406</x>
      <y>20</y>
-     <width>16</width>
-     <height>16</height>
+     <width>20</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -1691,18 +1691,18 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>480</x>
      <y>20</y>
-     <width>41</width>
-     <height>16</height>
+     <width>71</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>direction</string>
+    <string>view direction</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_vdy">
+  <widget class="QLineEdit" name="lineEdit_theta">
    <property name="geometry">
     <rect>
-     <x>600</x>
+     <x>690</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1715,59 +1715,33 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_28">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>20</y>
-     <width>16</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>x:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_29">
-   <property name="geometry">
-    <rect>
-     <x>650</x>
-     <y>20</y>
-     <width>16</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>z:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_30">
-   <property name="geometry">
-    <rect>
-     <x>590</x>
-     <y>20</y>
-     <width>16</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>y:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_vdx">
-   <property name="geometry">
-    <rect>
-     <x>540</x>
+     <x>550</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
     </rect>
    </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   <property name="text">
+    <string>phi (°):</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_vdz">
+  <widget class="QLabel" name="label_30">
    <property name="geometry">
     <rect>
-     <x>660</x>
+     <x>640</x>
+     <y>20</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>theta (°):</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_phi">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
      <y>20</y>
      <width>41</width>
      <height>20</height>
@@ -1780,10 +1754,10 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>750</x>
+     <x>760</x>
      <y>20</y>
      <width>41</width>
-     <height>16</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -1806,10 +1780,10 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_32">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>286</x>
      <y>20</y>
-     <width>16</width>
-     <height>16</height>
+     <width>20</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -1829,7 +1803,7 @@ p, li { white-space: pre-wrap; }
     <signal>setDFImage(QPixmap)</signal>
     <signal>DFToolTip(QString)</signal>
     <signal>setGlareIndex()</signal>
-    <signal>view(float,float,float,float,float,float)</signal>
+    <signal>view(float,float,float,float,float)</signal>
     <slot>setLatitude(QString)</slot>
     <slot>setLongitude(QString)</slot>
     <slot>setMonth(QString)</slot>
@@ -1848,6 +1822,7 @@ p, li { white-space: pre-wrap; }
     <slot>setGlareIndexChanged(QString)</slot>
     <slot>convertBTDF()</slot>
     <slot>launchSimulation()</slot>
+    <slot>setViewPointX(QString)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -2496,10 +2471,26 @@ p, li { white-space: pre-wrap; }
    </hints>
   </connection>
   <connection>
-   <sender>widget</sender>
-   <signal>view(float,float,float,float,float,float)</signal>
+   <sender>lineEdit_scale</sender>
+   <signal>editingFinished()</signal>
    <receiver>VisuCFS</receiver>
-   <slot>setView(float,float,float,float,float,float)</slot>
+   <slot>setScale()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>823</x>
+     <y>33</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>676</x>
+     <y>10</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>widget</sender>
+   <signal>view(float,float,float,float,float)</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setView(float,float,float,float,float)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>629</x>
@@ -2512,17 +2503,81 @@ p, li { white-space: pre-wrap; }
    </hints>
   </connection>
   <connection>
-   <sender>lineEdit_scale</sender>
-   <signal>textChanged(QString)</signal>
+   <sender>lineEdit_vpx</sender>
+   <signal>editingFinished()</signal>
    <receiver>VisuCFS</receiver>
-   <slot>setScale()</slot>
+   <slot>setViewPoint()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>823</x>
-     <y>33</y>
+     <x>329</x>
+     <y>34</y>
     </hint>
     <hint type="destinationlabel">
-     <x>676</x>
+     <x>312</x>
+     <y>12</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_vpy</sender>
+   <signal>editingFinished()</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setViewPoint()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>387</x>
+     <y>27</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>379</x>
+     <y>11</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_vpz</sender>
+   <signal>editingFinished()</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setViewPoint()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>445</x>
+     <y>28</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>444</x>
+     <y>13</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_phi</sender>
+   <signal>editingFinished()</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setViewDirection()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>589</x>
+     <y>34</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>584</x>
+     <y>15</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>lineEdit_theta</sender>
+   <signal>editingFinished()</signal>
+   <receiver>VisuCFS</receiver>
+   <slot>setViewDirection()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>693</x>
+     <y>27</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>704</x>
      <y>10</y>
     </hint>
    </hints>
@@ -2565,8 +2620,10 @@ p, li { white-space: pre-wrap; }
   <slot>setFileBSDF(QString)</slot>
   <slot>setFilePrism2(QString)</slot>
   <slot>setGlassTransmissivity(QString)</slot>
-  <slot>setView(float,float,float,float,float,float)</slot>
+  <slot>setView(float,float,float,float,float)</slot>
   <slot>setScale(QString)</slot>
   <slot>setScale()</slot>
+  <slot>setViewPoint()</slot>
+  <slot>setViewDirection()</slot>
  </slots>
 </ui>
